--- a/src/main/resources/org/example/airlinesystem/AirlineSystem1.fxml
+++ b/src/main/resources/org/example/airlinesystem/AirlineSystem1.fxml
@@ -1,14 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.airlinesystem.AirlineSystem1"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.airlinesystem.AirlineSystem1">
+   <children>
+      <Pane layoutX="1.0" prefHeight="414.0" prefWidth="614.0">
+         <children>
+            <Label layoutX="14.0" layoutY="14.0" text="Regestration">
+               <font>
+                  <Font size="32.0" />
+               </font>
+            </Label>
+            <Label layoutX="25.0" layoutY="80.0" text="Name:">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <Label layoutX="25.0" layoutY="120.0" text="Surname:">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <Label layoutX="25.0" layoutY="200.0" text="Age:">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <Label layoutX="25.0" layoutY="160.0" text="Gander:">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <Label layoutX="25.0" layoutY="240.0" text="Email:">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <Label layoutX="25.0" layoutY="280.0" text="Password:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <padding>
+                  <Insets top="10.0" />
+               </padding></Label>
+            <TextField layoutX="87.0" layoutY="81.0" />
+            <TextField layoutX="104.0" layoutY="121.0" />
+            <RadioButton layoutX="113.0" layoutY="165.0" mnemonicParsing="false" text="Male" />
+            <RadioButton layoutX="203.0" layoutY="165.0" mnemonicParsing="false" text="Female" />
+            <TextField layoutX="72.0" layoutY="201.0" />
+            <TextField layoutX="86.0" layoutY="241.0" />
+            <PasswordField layoutX="118.0" layoutY="286.0" />
+            <Button layoutX="264.0" layoutY="343.0" mnemonicParsing="false" text="Registrate">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+         </children>
+      </Pane>
+   </children>
 </AnchorPane>
