--- a/src/main/resources/org/example/airlinesystem/hello-view.fxml
+++ b/src/main/resources/org/example/airlinesystem/hello-view.fxml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.example.airlinesystem.HelloController">
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.Pane?>
 
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="270.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <CheckBox layoutX="100.0" layoutY="290.0" mnemonicParsing="false" text="Not Robot" />
+      <Label layoutX="90.0" layoutY="80.0" prefHeight="23.0" prefWidth="95.0" text="Enter your email :" />
+      <Label layoutX="90.0" layoutY="190.0" prefHeight="23.0" prefWidth="120.0" text="Enter your password : " />
+      <PasswordField layoutX="60.0" layoutY="230.0" />
+      <Separator layoutX="26.0" layoutY="170.0" prefWidth="200.0" />
+      <PasswordField layoutX="60.0" layoutY="120.0" />
+      <Button layoutX="110.0" layoutY="320.0" mnemonicParsing="false" text="Button" />
+   </children>
+</Pane>
