--- a/src/main/resources/org/example/airlinesystem/Login.fxml
+++ b/src/main/resources/org/example/airlinesystem/Login.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="270.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="270.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.airlinesystem.Login">
    <children>
       <CheckBox layoutX="100.0" layoutY="290.0" mnemonicParsing="false" text="Not Robot" />
       <Label layoutX="90.0" layoutY="80.0" prefHeight="23.0" prefWidth="95.0" text="Enter your email :" />
