--- a/src/main/resources/org/example/airlinesystem/Registration.fxml
+++ b/src/main/resources/org/example/airlinesystem/Registration.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.airlinesystem.AirlineSystem1">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.airlinesystem.Registration">
    <children>
       <Pane layoutX="1.0" prefHeight="414.0" prefWidth="614.0">
          <children>
@@ -46,13 +46,13 @@
                <padding>
                   <Insets top="10.0" />
                </padding></Label>
-            <TextField layoutX="87.0" layoutY="81.0" />
-            <TextField layoutX="104.0" layoutY="121.0" />
+            <TextField layoutX="87.0" layoutY="81.0" promptText="nameField" />
+            <TextField layoutX="104.0" layoutY="121.0" promptText="surnameField" />
             <RadioButton layoutX="113.0" layoutY="165.0" mnemonicParsing="false" text="Male" />
             <RadioButton layoutX="203.0" layoutY="165.0" mnemonicParsing="false" text="Female" />
-            <TextField layoutX="72.0" layoutY="201.0" />
-            <TextField layoutX="86.0" layoutY="241.0" />
-            <PasswordField layoutX="118.0" layoutY="286.0" />
+            <TextField layoutX="72.0" layoutY="201.0" promptText="ageField" />
+            <TextField layoutX="86.0" layoutY="241.0" promptText="emailField" />
+            <PasswordField layoutX="118.0" layoutY="286.0" promptText="passwordField" />
             <Button layoutX="264.0" layoutY="343.0" mnemonicParsing="false" text="Registrate">
                <font>
                   <Font size="15.0" />
