--- a/src/main/resources/org/example/airlinesystem/Login.fxml
+++ b/src/main/resources/org/example/airlinesystem/Login.fxml
@@ -15,6 +15,6 @@
       <PasswordField layoutX="60.0" layoutY="230.0" />
       <Separator layoutX="26.0" layoutY="170.0" prefWidth="200.0" />
       <PasswordField layoutX="60.0" layoutY="120.0" />
-      <Button layoutX="110.0" layoutY="320.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="110.0" layoutY="320.0" mnemonicParsing="false" text="Login" />
    </children>
 </Pane>
