--- a/src/main/resources/org/example/airlinesystem/Search.fxml
+++ b/src/main/resources/org/example/airlinesystem/Search.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.airlinesystem.Search">
    <children>
       <Pane prefHeight="400.0" prefWidth="602.0">
@@ -39,7 +38,12 @@
                 </Menu>
               </menus>
             </MenuBar>
-            <Button layoutX="265.0" layoutY="310.0" mnemonicParsing="false" text="Book">
+            <Button layoutX="135.0" layoutY="311.0" mnemonicParsing="false" text="Book">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+            <Button layoutX="338.0" layoutY="311.0" mnemonicParsing="false" text="Clear">
                <font>
                   <Font size="15.0" />
                </font>
