--- a/src/main/resources/org/example/airlinesystem/Welcome.fxml
+++ b/src/main/resources/org/example/airlinesystem/Welcome.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,13 +10,12 @@
    <children>
       <Pane layoutY="3.0" prefHeight="400.0" prefWidth="607.0">
          <children>
-            <Button layoutX="245.0" layoutY="220.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="110.0" text="Registraition" />
+            <Button layoutX="245.0" layoutY="220.0" mnemonicParsing="false" onAction="#goToRegistration" prefHeight="36.0" prefWidth="110.0" text="Registraition" />
             <Label layoutX="43.0" layoutY="14.0" prefHeight="44.0" prefWidth="513.0" text="Wellcome to Airline Ticket Managment System">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="229.0" layoutY="175.0" />
             <Button layoutX="245.0" layoutY="147.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="110.0" text="Login" />
          </children>
       </Pane>
