--- a/src/main/resources/org/example/airlinesystem/Center.fxml
+++ b/src/main/resources/org/example/airlinesystem/Center.fxml
@@ -18,7 +18,7 @@
          <content>
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <Label layoutX="40.0" layoutY="90.0" text="Departure">
+                  <Label layoutX="40.0" layoutY="90.0" text="Departure:">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -44,25 +44,24 @@
                   <DatePicker layoutX="230.0" layoutY="150.0" />
                   <TextField layoutX="230.0" layoutY="85.0" />
                   <TextField layoutX="230.0" layoutY="118.0" />
-                  <Label layoutX="168.0" text="Search Ticket ">
+                  <Label layoutX="197.0" text="Search Ticket ">
                      <font>
                         <Font size="32.0" />
                      </font>
                   </Label>
-                  <Label layoutX="526.0" layoutY="225.0" text="Search">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                  <TableView layoutX="107.0" layoutY="236.0" prefHeight="134.0" prefWidth="374.0">
+                  <TableView layoutX="60.0" layoutY="217.0" prefHeight="134.0" prefWidth="501.0">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="C1" />
-                      <TableColumn prefWidth="75.0" text="C2" />
-                        <TableColumn prefWidth="75.0" text="C2" />
-                        <TableColumn prefWidth="75.0" text="C2" />
+                      <TableColumn prefWidth="75.0" text="Departure" />
+                      <TableColumn prefWidth="75.0" text="Arrivle" />
+                        <TableColumn prefWidth="75.0" text="Data" />
+                        <TableColumn prefWidth="75.0" text="Price" />
                         <TableColumn prefWidth="75.0" text="C2" />
                     </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
                   </TableView>
+                  <Button layoutX="493.0" layoutY="178.0" mnemonicParsing="false" text="Search" />
                </children>
             </AnchorPane>
          </content></Tab>
@@ -77,6 +76,9 @@
                   <TableColumn prefWidth="75.0" text="dep Time" />
                   <TableColumn prefWidth="75.0" text="Arr time" />
               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
             </TableView>
          </content></Tab>
       <Tab text="Ticket">
@@ -88,18 +90,21 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="141.0" layoutY="21.0" text="kns;dlk55" />
+                  <TextField layoutX="141.0" layoutY="21.0" />
                   <Button layoutX="331.0" layoutY="21.0" mnemonicParsing="false" text="Search" />
                   <TableView layoutX="-3.0" layoutY="59.0" prefHeight="238.0" prefWidth="600.0">
                     <columns>
                       <TableColumn prefWidth="75.0" text="ticket ID" />
                       <TableColumn prefWidth="75.0" text="flight ID" />
                         <TableColumn prefWidth="75.0" text="customer ID" />
-                        <TableColumn prefWidth="75.0" text="Seta #" />
+                        <TableColumn prefWidth="75.0" text="Seat#" />
                         <TableColumn fx:id="issu" prefWidth="75.0" text="issue date" />
-                        <TableColumn fx:id="dapr" prefWidth="75.0" text="departure date" />
-                        <TableColumn fx:id="status" prefWidth="75.0" text="status" />
+                        <TableColumn fx:id="dapr" prefWidth="98.0" text="departure date" />
+                        <TableColumn fx:id="status" prefWidth="68.0" text="status" />
                     </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
                   </TableView>
                   <Button layoutX="518.0" layoutY="314.0" mnemonicParsing="false" text="diactivate" />
                </children>
