--- a/src/main/resources/org/example/airlinesystem/Login.fxml
+++ b/src/main/resources/org/example/airlinesystem/Login.fxml
@@ -7,15 +7,16 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane fx:id="loginController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="270.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.airlinesystem.Login">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="270.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.airlinesystem.Login">
    <children>
       <Label fx:id="emailEnter" layoutX="90.0" layoutY="80.0" prefHeight="23.0" prefWidth="95.0" text="Enter your email :" />
       <Label fx:id="passwordLabal" layoutX="73.0" layoutY="189.0" prefHeight="23.0" prefWidth="120.0" text="Enter your password : " />
       <PasswordField fx:id="passwordField" layoutX="60.0" layoutY="232.0" />
-      <Separator fx:id="separator" layoutX="26.0" layoutY="170.0" prefWidth="200.0" />
-      <Button fx:id="LoginFiled" layoutX="110.0" layoutY="290.0" mnemonicParsing="false" text="Login" />
-      <Label fx:id="errorLabel" layoutX="87.0" layoutY="335.0" prefHeight="23.0" prefWidth="95.0" />
+      <Separator layoutX="26.0" layoutY="170.0" prefWidth="200.0" />
+      <Button fx:id="loginButton" layoutX="67.0" layoutY="289.0" mnemonicParsing="false" onAction="#onLoginButtonClick" text="Login" />
+      <Label fx:id="errorLabel" layoutX="38.0" layoutY="332.0" prefHeight="47.0" prefWidth="200.0" />
       <TextField fx:id="enterEmail" layoutX="63.0" layoutY="120.0" />
-      <Label layoutX="119.0" layoutY="338.0" text="Label" />
+      <Label layoutX="119.0" layoutY="338.0" />
+      <Button fx:id="backButton" layoutX="159.0" layoutY="289.0" mnemonicParsing="false" onAction="#goToWelcome" text="Back" />
    </children>
 </Pane>
