--- a/src/main/resources/org/example/airlinesystem/Center.fxml
+++ b/src/main/resources/org/example/airlinesystem/Center.fxml
@@ -55,7 +55,7 @@
                       <TableColumn prefWidth="75.0" text="Arrivle" />
                         <TableColumn prefWidth="75.0" text="Data" />
                         <TableColumn prefWidth="75.0" text="Price" />
-                        <TableColumn prefWidth="75.0" text="C2" />
+                        <TableColumn prefWidth="75.0" text="BookColumn" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
