--- a/src/main/resources/org/example/airlinesystem/Center.fxml
+++ b/src/main/resources/org/example/airlinesystem/Center.fxml
@@ -49,19 +49,19 @@
                         <Font size="32.0" />
                      </font>
                   </Label>
-                  <TableView layoutX="60.0" layoutY="217.0" prefHeight="134.0" prefWidth="501.0">
+                  <TableView layoutX="24.0" layoutY="221.0" prefHeight="136.0" prefWidth="483.0">
                     <columns>
                       <TableColumn prefWidth="75.0" text="Departure" />
                       <TableColumn prefWidth="75.0" text="Arrivle" />
                         <TableColumn prefWidth="75.0" text="Data" />
                         <TableColumn prefWidth="75.0" text="Price" />
-                        <TableColumn prefWidth="75.0" text="BookColumn" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
                   <Button layoutX="493.0" layoutY="178.0" mnemonicParsing="false" text="Search" />
+                  <Button layoutX="527.0" layoutY="325.0" mnemonicParsing="false" text="Book" />
                </children>
             </AnchorPane>
          </content></Tab>
