--- a/src/main/resources/org/example/airlinesystem/Center.fxml
+++ b/src/main/resources/org/example/airlinesystem/Center.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.airlinesystem.Center">
   <tabs>
     <Tab text="Search">
          <content>
@@ -38,43 +38,43 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <RadioButton layoutX="230.0" layoutY="182.0" mnemonicParsing="false" text="Economy" />
-                  <RadioButton layoutX="310.0" layoutY="182.0" mnemonicParsing="false" text="Business" />
-                  <RadioButton layoutX="390.0" layoutY="182.0" mnemonicParsing="false" text="Frist Class" />
-                  <DatePicker layoutX="230.0" layoutY="150.0" />
-                  <TextField layoutX="230.0" layoutY="85.0" />
-                  <TextField layoutX="230.0" layoutY="118.0" />
+                  <RadioButton fx:id="economyRadioButton" layoutX="230.0" layoutY="182.0" mnemonicParsing="false" text="Economy" />
+                  <RadioButton fx:id="businessRadioButton" layoutX="310.0" layoutY="182.0" mnemonicParsing="false" text="Business" />
+                  <RadioButton fx:id="firstClassRadioButton" layoutX="390.0" layoutY="182.0" mnemonicParsing="false" text="Frist Class" />
+                  <DatePicker fx:id="datePicker" layoutX="230.0" layoutY="150.0" />
+                  <TextField fx:id="departureField" layoutX="230.0" layoutY="85.0" />
+                  <TextField fx:id="arrivalField" layoutX="230.0" layoutY="118.0" />
                   <Label layoutX="197.0" text="Search Ticket ">
                      <font>
                         <Font size="32.0" />
                      </font>
                   </Label>
-                  <TableView layoutX="24.0" layoutY="221.0" prefHeight="136.0" prefWidth="483.0">
+                  <TableView fx:id="searchTableView" layoutX="24.0" layoutY="221.0" prefHeight="136.0" prefWidth="483.0">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="Departure" />
-                      <TableColumn prefWidth="75.0" text="Arrivle" />
-                        <TableColumn prefWidth="75.0" text="Data" />
-                        <TableColumn prefWidth="75.0" text="Price" />
+                      <TableColumn fx:id="departureColumn" prefWidth="75.0" text="Departure" />
+                      <TableColumn fx:id="arrivalColumn" prefWidth="75.0" text="Arrivle" />
+                        <TableColumn fx:id="dateColumn" prefWidth="75.0" text="Data" />
+                        <TableColumn fx:id="priceColumn" prefWidth="75.0" text="Price" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
-                  <Button layoutX="493.0" layoutY="178.0" mnemonicParsing="false" text="Search" />
-                  <Button layoutX="527.0" layoutY="325.0" mnemonicParsing="false" text="Book" />
+                  <Button layoutX="493.0" layoutY="178.0" mnemonicParsing="false" onAction="#onSearchFlights" text="Search" />
+                  <Button layoutX="527.0" layoutY="325.0" mnemonicParsing="false" onAction="#loadAllFlights" text="Book" />
                </children>
             </AnchorPane>
          </content></Tab>
     <Tab text="Flights">
          <content>
-            <TableView prefHeight="200.0" prefWidth="200.0">
+            <TableView fx:id="flightsTableView" prefHeight="200.0" prefWidth="200.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="flight ID" />
-                <TableColumn prefWidth="75.0" text="fight #" />
-                  <TableColumn prefWidth="75.0" text="Dep City" />
-                  <TableColumn prefWidth="75.0" text="Arr City" />
-                  <TableColumn prefWidth="75.0" text="dep Time" />
-                  <TableColumn prefWidth="75.0" text="Arr time" />
+                <TableColumn fx:id="flightIdColumn" prefWidth="75.0" text="flight ID" />
+                <TableColumn fx:id="flightNumberColumn" prefWidth="75.0" text="flight #" />
+                  <TableColumn fx:id="depCityColumn" prefWidth="75.0" text="Dep City" />
+                  <TableColumn fx:id="arrCityColumn" prefWidth="75.0" text="Arr City" />
+                  <TableColumn fx:id="depTimeColumn" prefWidth="75.0" text="dep Time" />
+                  <TableColumn fx:id="arrTimeColumn" prefWidth="75.0" text="Arr time" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -90,17 +90,17 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="141.0" layoutY="21.0" />
-                  <Button layoutX="331.0" layoutY="21.0" mnemonicParsing="false" text="Search" />
-                  <TableView layoutX="-3.0" layoutY="59.0" prefHeight="238.0" prefWidth="600.0">
+                  <TextField fx:id="ticketIdField" layoutX="141.0" layoutY="21.0" />
+                  <Button layoutX="331.0" layoutY="21.0" mnemonicParsing="false" onAction="#onSearchTicket" text="Search" />
+                  <TableView fx:id="ticketTableView" layoutX="-3.0" layoutY="59.0" prefHeight="238.0" prefWidth="600.0">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="ticket ID" />
-                      <TableColumn prefWidth="75.0" text="flight ID" />
-                        <TableColumn prefWidth="75.0" text="customer ID" />
-                        <TableColumn prefWidth="75.0" text="Seat#" />
-                        <TableColumn fx:id="issu" prefWidth="75.0" text="issue date" />
-                        <TableColumn fx:id="dapr" prefWidth="98.0" text="departure date" />
-                        <TableColumn fx:id="status" prefWidth="68.0" text="status" />
+                      <TableColumn fx:id="ticketIdColumn" prefWidth="75.0" text="ticket ID" />
+                      <TableColumn fx:id="flightIdTicketColumn" prefWidth="75.0" text="flight ID" />
+                        <TableColumn fx:id="customerIdColumn" prefWidth="75.0" text="customer ID" />
+                        <TableColumn fx:id="seatNumberColumn" prefWidth="75.0" text="Seat#" />
+                        <TableColumn fx:id="issueDateColumn" prefWidth="75.0" text="issue date" />
+                        <TableColumn fx:id="departureDateColumn" prefWidth="98.0" text="departure date" />
+                        <TableColumn fx:id="statusColumn" prefWidth="68.0" text="status" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
